unpackaged/config/npc/objects/BudgetPeriod/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
    <description>Optional description shown as help text, title, or tooltip for this period.</description>
    <inlineHelpText>Shown in the period's info popover in the budget grid.</inlineHelpText>
</CustomField>