unpackaged/config/npc/objects/BudgetPeriod/fields/Maximum_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Funding_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maximum Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Advisory cap on the period's column total across all categories. The Universal Budget grid surfaces a violation when the period total exceeds this amount; saving is never blocked. 0 means no limit.</description>
    <inlineHelpText>Maximum total this period may reach across all categories. The grid flags the period when it is over. Leave 0 for no limit.</inlineHelpText>
</CustomField>