unpackaged/config/npc/objects/BudgetPeriod/fields/Maximum_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Percentage__c</fullName>
    <label>Maximum Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
    <description>Maximum percentage of the total budget that may be allocated to this period.</description>
    <inlineHelpText>Largest share of the total budget this period may hold, as a percentage. Leave 0 for no limit.</inlineHelpText>
</CustomField>