unpackaged/config/npc/objects/BudgetPeriod/fields/Minimum_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Funding_Amount__c</fullName>
    <label>Minimum Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Minimum amount that must be allocated to this period.</description>
    <inlineHelpText>Minimum total this period must reach across all categories. The grid flags the period while it is under. Leave 0 for no minimum.</inlineHelpText>
</CustomField>